--- a/Seccion04v2/app/src/main/AndroidManifest.xml
+++ b/Seccion04v2/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.seccion04v2">
 
     <application
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
