--- a/Seccion04v2/app/build.gradle
+++ b/Seccion04v2/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    compile 'com.android.support:design:29.+'
+    implementation 'com.android.support:design:29.+'
     apply plugin: 'realm-android'
 }
