--- a/Seccion04_Ciudades/app/build.gradle
+++ b/Seccion04_Ciudades/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.android.support:design:29.+'
     apply plugin: 'realm-android'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
