--- a/Seccion09_fragment/app/src/main/AndroidManifest.xml
+++ b/Seccion09_fragment/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+		<activity
+			android:name="actividades.DetalleActivity"
+			android:label="@string/title_activity_detalle"
+			android:theme="@style/AppTheme.NoActionBar"></activity>
 		<activity android:name="Activities.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
