--- a/Seccion09_fragment/app/src/main/AndroidManifest.xml
+++ b/Seccion09_fragment/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 		<activity
-			android:name="actividades.DetalleActivity"
+			android:name="activities.DetalleActivity"
 			android:label="@string/title_activity_detalle"
 			android:theme="@style/AppTheme.NoActionBar"></activity>
-		<activity android:name="Activities.MainActivity">
+		<activity android:name="activities.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
