--- a/Ejemplos MR/EjemploListView/app/src/main/AndroidManifest.xml
+++ b/Ejemplos MR/EjemploListView/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.example.seccion09_fragment_tarea">
+	package="com.example.ejemplolistview">
 
 	<application
 		android:allowBackup="true"
