--- a/Seccion10_tabs_tarea/app/src/main/AndroidManifest.xml
+++ b/Seccion10_tabs_tarea/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.example.seccion10_tabs">
+	package="com.example.seccion10_tabs_tarea">
 
 	<application
 		android:allowBackup="true"
@@ -9,7 +9,7 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".activities.MainActivity">
+		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
