--- a/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
+    // agregada por MR. Es para el FileUtils
+    implementation 'commons-io:commons-io:2.6'
 }
