--- a/BotoneraForgottera/app/src/main/AndroidManifest.xml
+++ b/BotoneraForgottera/app/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="martin.botoneraforgottera">
 
-	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
@@ -19,15 +16,16 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<!--			android:name=".Activities.GenericFileProvider"-->
+		<!--	- - - - - 	Agregamos nuestro FileProvider       - - - - -     -->
 		<provider
 			android:name="androidx.core.content.FileProvider"
-			android:authorities="${applicationId}.provider"
+			android:authorities="${applicationId}.myfileprovider"
 			android:exported="false"
 			android:grantUriPermissions="true">
 			<meta-data
 				android:name="android.support.FILE_PROVIDER_PATHS"
-				android:resource="@xml/external_files" />
+				android:resource="@xml/filepaths" />
 		</provider>
+		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	</application>
 </manifest>
