--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/AndroidManifest.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="martin.botoneraforgottera">
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application
+		android:name=".Sticker.StickerApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme"
+		tools:ignore="GoogleAppIndexingWarning">
+		<activity android:name=".Activities.PruebaaaActivity"></activity>
 		<activity android:name=".Activities.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</activity>
-		<!--	- - - - - 	Agregamos nuestro FileProvider       - - - - -     -->
+		</activity> <!-- - - - - - 	Agregamos nuestro FileProvider       - - - - - -->
 		<provider
 			android:name="androidx.core.content.FileProvider"
 			android:authorities="${applicationId}.myfileprovider"
@@ -26,6 +29,33 @@
 				android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/filepaths" />
 		</provider>
-		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+		<!--		wppppppppppppppppppppppppppppppppppppppppppppppppppppp-->
+		<activity android:name=".Sticker.EntryActivity"></activity>
+		<activity android:name=".Sticker.StickerPackListActivity" />
+		<activity
+			android:name=".Sticker.StickerPackDetailsActivity"
+			android:parentActivityName=".Sticker.StickerPackListActivity"
+			tools:ignore="UnusedAttribute">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".Sticker.StickerPackListActivity" />
+		</activity>
+		<activity
+			android:name=".Sticker.StickerPackInfoActivity"
+			android:label="@string/title_activity_sticker_pack_info"
+			android:parentActivityName=".Sticker.StickerPackDetailsActivity"
+			tools:ignore="UnusedAttribute">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".Sticker.StickerPackDetailsActivity" />
+		</activity>
+
+		<provider
+			android:name=".Sticker.StickerContentProvider"
+			android:authorities="${contentProviderAuthority}"
+			android:enabled="true"
+			android:exported="true"
+			android:readPermission="com.whatsapp.sticker.READ" />
+		<!--		***********************************************************-->
 	</application>
 </manifest>
