--- a/BotoneraForgottera_stickers_v2/BotoneraForgottera/app/src/main/AndroidManifest.xml
+++ b/BotoneraForgottera_stickers_v2/BotoneraForgottera/app/src/main/AndroidManifest.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="martin.botoneraforgottera">
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application
+		android:name=".Stickers.StickerApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".Activities.MainActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
+		<activity android:name=".Activities.MainActivity"></activity>
 		<!--	- - - - - 	Agregamos nuestro FileProvider       - - - - -     -->
 		<provider
 			android:name="androidx.core.content.FileProvider"
@@ -27,5 +24,36 @@
 				android:resource="@xml/filepaths" />
 		</provider>
 		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+		<activity android:name=".Stickers.EntryActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".Stickers.StickerPackListActivity" />
+		<activity
+			android:name=".Stickers.StickerPackDetailsActivity"
+			android:parentActivityName=".Stickers.StickerPackListActivity"
+			tools:ignore="UnusedAttribute">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="martin.botoneraforgottera.Stickers.StickerPackListActivity" />
+		</activity>
+		<activity
+			android:name=".Stickers.StickerPackInfoActivity"
+			android:label="@string/title_activity_sticker_pack_info"
+			android:parentActivityName=".Stickers.StickerPackDetailsActivity"
+			tools:ignore="UnusedAttribute">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="martin.botoneraforgottera.Stickers.StickerPackDetailsActivity" />
+		</activity>
+
+		<provider
+			android:name=".Stickers.StickerContentProvider"
+			android:authorities="${contentProviderAuthority}"
+			android:enabled="true"
+			android:exported="true"
+			android:readPermission="com.whatsapp.sticker.READ" />
 	</application>
 </manifest>
