--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     // agregada por MR. Es para el FileUtils
     implementation 'commons-io:commons-io:2.6'
+    // Realm
+    apply plugin: 'realm-android'
     // wppppppppppppppppppppppppppppppppppppp
     implementation 'com.facebook.fresco:fresco:2.0.0'
     implementation 'com.facebook.fresco:webpsupport:2.0.0'
