--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "martin.botoneraforgottera"
         minSdkVersion 15
         targetSdkVersion 29
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         // wppppppppppppppppppppppppppppppppppppp
@@ -58,5 +58,18 @@ dependencies {
     implementation 'com.facebook.fresco:animated-webp:2.0.0'
     implementation 'com.facebook.fresco:animated-base:2.0.0'
     // -------------------------------------------
+
+//    implementation 'com.android.support:support-core-utils:29.0.0'
+
+
+//----------    Material icons
+
+    // https://mvnrepository.com/artifact/com.google.android.material/material
+//    compile group: 'com.google.android.material', name: 'material', version: '1.2.0-alpha02'
+
+//    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+//    -----------------
+
 
 }
