--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -1,20 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    //the compression of webp file during build causes problem with FileDescriptor in ContentProvider.
+    // ----------    WhatsApp Stickers
     aaptOptions {
         noCompress "webp"
     }
+    // --------------------------------------------------------------------
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "martin.botoneraforgottera"
         minSdkVersion 15
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0"
+        versionCode 5
+        versionName "5.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        // wppppppppppppppppppppppppppppppppppppp
+        // ----------    WhatsApp Stickers
         def contentProviderAuthority = applicationId + ".botoneraforgotteracontentprovider"
         // Creates a placeholder property to use in the manifest.
         manifestPlaceholders =
@@ -23,7 +24,7 @@ android {
         buildConfigField("String",
                 "CONTENT_PROVIDER_AUTHORITY",
                 "\"${contentProviderAuthority}\"")
-        // -------------------------------------------
+        // --------------------------------------------------------------------
     }
     buildTypes {
         release {
