--- a/SayTheWord/app/build.gradle
+++ b/SayTheWord/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha03'
-
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    apply plugin: 'realm-android'
 }
