--- a/SayTheWord/SayTheWord/app/build.gradle
+++ b/SayTheWord/SayTheWord/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.saytheword"
+        applicationId "martin.ingles.saytheword"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 7
