--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -6,14 +6,14 @@ android {
         noCompress "webp"
     }
     // --------------------------------------------------------------------
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
     defaultConfig {
-        applicationId "martin.botoneraforgottera"
-        minSdkVersion 15
-        targetSdkVersion 29
-        versionCode 7
-        versionName "7.0"
+        applicationId "martin.ingles.saytheword"
+        minSdkVersion 16
+        targetSdkVersion 30
+        versionCode 14
+        versionName "14.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         // ----------    WhatsApp Stickers
         def contentProviderAuthority = applicationId + ".botoneraforgotteracontentprovider"
