--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/AndroidManifest.xml
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	package="martin.botoneraforgottera">
 
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application
 		android:name=".Sticker.StickerApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
+		android:requestLegacyExternalStorage="true"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme"
@@ -19,17 +19,6 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<!-- - - - - - - - - - - FileProvider Para Audios - - - - - - - - - - - -  -->
-		<provider
-			android:name="androidx.core.content.FileProvider"
-			android:authorities="${applicationId}.myfileprovider"
-			android:exported="false"
-			android:grantUriPermissions="true">
-			<meta-data
-				android:name="android.support.FILE_PROVIDER_PATHS"
-				android:resource="@xml/filepaths" />
-		</provider>
-		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 		<!-- - - - - - - - - - - WhatsApp Stickers - - - - - - - - - - - -  -->
 		<activity android:name=".Sticker.EntryActivity" />
 		<activity android:name=".Sticker.StickerPackListActivity" />
@@ -58,5 +47,17 @@
 			android:exported="true"
 			android:readPermission="com.whatsapp.sticker.READ" />
 		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+		<!-- - - - - - - - - - - FileProvider Para Audios - - - - - - - - - - - -  -->
+		<provider
+			android:name="androidx.core.content.FileProvider"
+			android:authorities="${applicationId}.myfileprovider"
+			android:exported="false"
+			android:grantUriPermissions="true">
+			<meta-data
+				android:name="android.support.FILE_PROVIDER_PATHS"
+				android:resource="@xml/filepaths" />
+		</provider>
+		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 	</application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
