--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -36,6 +36,17 @@ android {
         targetCompatibility = 1.8
         sourceCompatibility = 1.8
     }
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res',
+                            'src/main/res/layouts/common',
+                            'src/main/res/layouts/stickers',
+                            'src/main/res/layouts/audios',
+                    ]
+        }
+    }
 }
 
 
