--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
     defaultConfig {
-        applicationId "martin.ingles.saytheword"
+        applicationId "martin.botonera.forgottera"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 14
