--- a/CuantoCuesta/CuantoCuesta/app/build.gradle
+++ b/CuantoCuesta/CuantoCuesta/app/build.gradle
@@ -7,11 +7,11 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.martin.cuantocuesta"
+        applicationId "martin.cuantocuesta"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
