fix de compartida de audio en android 11

--- a/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera_stickers/BotoneraForgottera/app/build.gradle
@@ -2,9 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     // ----------    WhatsApp Stickers
-    aaptOptions {
-        noCompress "webp"
-    }
     // --------------------------------------------------------------------
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -46,6 +43,9 @@ android {
                             'src/main/res/layouts/audios',
                     ]
         }
+    }
+    androidResources {
+        noCompress 'webp'
     }
 }
 
