--- a/EditGoogleSheets/app/build.gradle
+++ b/EditGoogleSheets/app/build.gradle
@@ -25,6 +25,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
@@ -37,7 +48,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Agregadas:
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev614-1.18.0-rc'
     implementation 'com.google.api-client:google-api-client:1.32.2'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
-    implementation 'com.google.apis:google-api-services-sheets:v4-rev614-1.18.0-rc'
+
+//    // https://mvnrepository.com/artifact/com.sun.net.httpserver/http
+//    implementation 'com.sun.net.httpserver:http:20070405'
+//// https://mvnrepository.com/artifact/com.sun/tools
+//    implementation 'com.sun:tools:1.7.0.13'
+
+
+
 }
