--- a/Google Sheets Api/EditGoogleSheets_v2/app/build.gradle
+++ b/Google Sheets Api/EditGoogleSheets_v2/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "martin.googlesheetsapi"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -25,16 +25,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude("META-INF/*.kotlin_module")
+//        exclude 'META-INF/LICENSE'
+//        exclude 'META-INF/LICENSE.txt'
+//        exclude 'META-INF/license.txt'
+//        exclude 'META-INF/NOTICE'
+//        exclude 'META-INF/NOTICE.txt'
+//        exclude 'META-INF/notice.txt'
+//        exclude 'META-INF/ASL2.0'
+//        exclude("META-INF/*.kotlin_module")
     }
 }
 
@@ -43,20 +44,26 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    testImplementation 'junit:junit:'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Agregadas:
+    //    agregadas
     implementation 'com.google.apis:google-api-services-sheets:v4-rev614-1.18.0-rc'
     implementation 'com.google.api-client:google-api-client:1.32.2'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
+    implementation 'com.google.api-client:google-api-client-jackson2:1.20.0'
 
-//    // https://mvnrepository.com/artifact/com.sun.net.httpserver/http
-//    implementation 'com.sun.net.httpserver:http:20070405'
-//// https://mvnrepository.com/artifact/com.sun/tools
-//    implementation 'com.sun:tools:1.7.0.13'
+    // https://mvnrepository.com/artifact/com.sun.net.httpserver/http
+    implementation 'com.sun.net.httpserver:http:20070405'
+    // https://mvnrepository.com/artifact/com.sun.security.auth.module/psiNtSystem
+//    implementation group: 'com.sun.security.auth.module', name: 'psiNtSystem', version: '1.0.0'
 
+    // https://mvnrepository.com/artifact/com.sun/tools
+//    implementation group: 'com.sun', name: '*'
+
+    // https://mvnrepository.com/artifact/com.sun/tools
+//    system 'com.sun:tools:1.5.0'
 
 
 }
