--- a/Google Sheets Api/EditGoogleSheets_v5/app/build.gradle
+++ b/Google Sheets Api/EditGoogleSheets_v5/app/build.gradle
@@ -26,16 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
-//        exclude 'META-INF/LICENSE'
-//        exclude 'META-INF/LICENSE.txt'
-//        exclude 'META-INF/license.txt'
-//        exclude 'META-INF/NOTICE'
-//        exclude 'META-INF/NOTICE.txt'
-//        exclude 'META-INF/notice.txt'
-//        exclude 'META-INF/ASL2.0'
-//        exclude("META-INF/*.kotlin_module")
     }
 }
 
@@ -48,19 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
-
-//    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'com.android.support:appcompat-v7:26.0.2'
-//    implementation 'com.google.android.gms:play-services-auth:11.4.0'
-//    implementation 'pub.devrel:easypermissions:0.3.0'
-//    implementation('com.google.api-client:google-api-client-android:1.23.0') {
-//        exclude group: 'org.apache.httpcomponents'
-//    }
-//    implementation('com.google.apis:google-api-services-sheets:v4-rev506-1.23.0') {
-//        exclude group: 'org.apache.httpcomponents'
-//    }
-
+    // Agregadas
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.0.2'
     implementation 'com.google.android.gms:play-services-auth:20.0.0'
@@ -69,22 +50,11 @@ dependencies {
     implementation('com.google.api-client:google-api-client-android:1.32.2') {
         exclude group: 'org.apache.httpcomponents'
     }
-//    implementation('com.google.apis:google-api-services-sheets:v4-rev506-1.23.0') {
-//        exclude group: 'org.apache.httpcomponents'
-//    }
-
-
-    //    agregadas
     implementation 'com.google.apis:google-api-services-sheets:v4-rev614-1.18.0-rc'
     implementation 'com.google.api-client:google-api-client:1.32.2'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
     implementation 'com.google.api-client:google-api-client-jackson2:1.20.0'
-
-//    // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
-    implementation 'com.google.http-client:google-http-client-android:1.12.0-beta'
-
-
-
+    implementation 'com.google.http-client:google-http-client-android:1.23.0'
 
 
 }
