--- a/Google Sheets Api/EditGoogleSheets_V6/app/build.gradle
+++ b/Google Sheets Api/EditGoogleSheets_V6/app/build.gradle
@@ -25,6 +25,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
@@ -47,7 +51,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-android:1.32.2'
 
     // https://mvnrepository.com/artifact/com.google.android.gms/play-services-identity
-    implementation 'com.google.android.gms:play-services-identity:15.0.0'
+    implementation 'com.google.android.gms:play-services-identity:18.0.1'
 
 
     // https://mvnrepository.com/artifact/com.google.apis/google-api-services-script
@@ -55,6 +59,8 @@ dependencies {
 
 
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
-    implementation 'com.google.http-client:google-http-client-android:1.12.0-beta'
+    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
 
 }
