--- a/Google Sheets Api/EditGoogleSheets_v4/app/build.gradle
+++ b/Google Sheets Api/EditGoogleSheets_v4/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-android
     implementation 'com.google.http-client:google-http-client-android:1.12.0-beta'
 
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
 
 
 }
