--- a/SayTheWord/SayTheWord/app/build.gradle
+++ b/SayTheWord/SayTheWord/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "martin.ingles.saytheword"
         minSdkVersion 16
@@ -17,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'martin.ingles.saytheword'
 }
 
 dependencies {
