--- a/CuantoCuesta/CuantoCuesta_v2/app/src/main/AndroidManifest.xml
+++ b/CuantoCuesta/CuantoCuesta_v2/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CuantoCuesta_v2"
+        android:theme="@style/Theme.CuantoCuesta"
         tools:targetApi="31">
         <activity
             android:name=".Activities.MainActivity"
