--- a/BotoneraForgottera/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera/BotoneraForgottera/app/build.gradle
@@ -29,6 +29,12 @@ android {
         // --------------------------------------------------------------------
     }
 
+
+    buildFeatures {
+        buildConfig = true
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
