bottonre forgottera update

--- a/BotoneraForgottera/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera/BotoneraForgottera/app/build.gradle
@@ -51,9 +51,10 @@ android {
             res.srcDirs =
                     [
                             'src/main/res',
-                            'src/main/res/layouts/common',
-                            'src/main/res/layouts/stickers',
-                            'src/main/res/layouts/audios',
+                            'src/main/papa',
+//                            'src/main/res/layouts/common',
+//                            'src/main/res/layouts/stickers',
+//                            'src/main/res/layouts/audios',
                     ]
         }
     }
