--- a/BotoneraForgottera/BotoneraForgottera/app/build.gradle
+++ b/BotoneraForgottera/BotoneraForgottera/app/build.gradle
@@ -72,18 +72,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    //    Agregadas
-    implementation 'com.google.android.material:material:1.4.0'
+    //    Agregadas  ------------ lo sacamooooooooooooooos
+    // implementation 'com.google.android.material:material:1.4.0'
     // ----------    Para el FileUtils
     implementation 'commons-io:commons-io:2.6'
     // --------------------------------------------------------------------
-    // ----------    Realm
-    apply plugin: 'realm-android'
+    // ----------    Realm ------------ lo sacamooooooooooooooos
+    // apply plugin: 'realm-android'
 
-    implementation 'io.realm:android-adapters:3.1.0'
+    // implementation 'io.realm:android-adapters:3.1.0'
     // --------------------------------------------------------------------
-    // ----------    Material icons
-    implementation 'com.google.android.material:material:1.6.0-alpha01'
+    // ----------    Material icons  ------------ lo sacamooooooooooooooos
+    //  implementation 'com.google.android.material:material:1.6.0-alpha01'
     // --------------------------------------------------------------------
     // ----------    WhatsApp Stickers
     implementation 'com.facebook.fresco:fresco:2.0.0'
