--- a/Solicitar Permisos/SolicitarPermisos/app/src/main/AndroidManifest.xml
+++ b/Solicitar Permisos/SolicitarPermisos/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
