--- a/Google Sheets Api/EditGoogleSheets_v8/app/build.gradle
+++ b/Google Sheets Api/EditGoogleSheets_v8/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'martin.editgooglesheets_v8'
+    namespace 'martin.googlesheetsapi'
     compileSdk 34
 
     defaultConfig {
-        applicationId "martin.editgooglesheets_v8"
+        applicationId "martin.googlesheetsapi"
         minSdk 24
         targetSdk 34
         versionCode 1
